# fluids

./: CMakeLists.txt  readme.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: camera.cpp  camera.h  engine.cpp  engine.h  fluids.cpp  main.cpp  shader.cpp  shader.h
src/renderer/: renderer2d.cpp  renderer2d.h
src/shaders/: noop_fragment.glsl  noop_vertex.glsl
src/sim/: sim2dCPU.cpp  sim2dCPU.h
test/sim/: test_sim2dCPU.cpp
